-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.8
-
None
-
c4d503be5 (dev), e24b705df (6.9), e904fc15d (6.8), 292614c8b (dev)
qmllint does not warn about redeclaration of JS variables, see attached Main.qml file.
- is required for
-
QTBUG-119890 qmllint warnings: reach feature parity with QtCreator
-
- In Progress
-
For Gerrit Dashboard: QTBUG-127107 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
631739,3 | qmllint: warn about variable redeclaration | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
632959,3 | qmllint: warn about variable redeclaration | 6.9 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
634502,5 | qmllint: warn about variable redeclaration | 6.8 | qt/qtdeclarative | Status: MERGED | +2 | +1 |
635999,7 | qmllint: implement WarnAlreadyX warnings | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |