qmllint: warn about variable redeclaration

Add a warning about variable redeclaration for 'let' and 'const'
variables: they are not allowed in JS.

Fixes: QTBUG-127107
Pick-to: 6.8
Change-Id: I44ba50e436b0b396a089bc8aedcef31d5455e48a
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
Reviewed-by: Olivier De Cannière <olivier.decanniere@qt.io>
(cherry picked from commit c4d503be574b56426573e706b70149eb57e52d61)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>